# ws-server-whisper

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.txt  models  stream.cpp  stream.hpp  stream_worker.hpp  vcpkg.json  wav_writer.h  whisper_channel.hpp  ws-server.cpp  ws_server.cpp
